java-microservice-with-python-via-jep/gitops-eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathservice-jep
spec:
  selector:
    app: mathservice-jep
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 8080
