java-microservice-with-python-via-jep/gitops-eks/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: mathservice-jep
spec:
  rules:
  - http:
      paths:
      - path: /mathservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mathservice-jep
            port:
              number: 8080
